stuck admin page fix for scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,4 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  overflow: hidden;
-  overscroll-behavior: none;
 }
